# infobeamer

./: .gitignore  Base.hs  ErrorMessages.hs  Feed.hs  Infobeamer.hs  Main.hs  User.hs  beamer.mkd  cabal.sandbox.config  infobeamer.cabal  tester.txt  ycomb.xml
front/: application.html  footer.html  header.html  infobeamer.html  landing.hemptml  write.html
front/css/: application.css
front/js/: landing.js
front/user/: new.hemptml  new_session.hemptml
rethinkdb_data/: 1aa0c0f3-d326-4fd0-a891-b9c2f1e1c266  auth_metadata  log_file  metadata
src/: Main.hs
src/Infobeamer/: Base.hs  ErrorMessages.hs  Feed.hs  Queries.hs  User.hs  Validation.hs
templates/: application.html  footer.html  header.html
