name:                Infobeamer
version:             0.1
synopsis:            Feed reader
description:         Customizable feed reader web application
license:             BSD3
license-file:        LICENSE
author:              Claus Skou Nielsen
maintainer:          kalusn@gmail.com
-- copyright:
category:            Web Application
build-type:          Simple
cabal-version:       >= 1.8
extra-source-files:  README.md

executable infobeamer
  main-is:           Main.hs
  other-modules:     Infobeamer.Base
                     Infobeamer.Feed
                     Infobeamer.ErrorMessages
                     Infobeamer.User
                     Infobeamer.Validation
  hs-source-dirs:    src
  build-depends:     base >= 4.5.0,
                     Spock == 0.3.0.0,
                     regex-compat == 0.95.1,
                     transformers == 0.3.0.0, 
                     scotty == 0.5.0,
                     feed == 0.3.9.2,
                     xml == 1.3.13,
                     Hemplate == 0.0.1,
                     rethinkdb == 1.8.0.5,
                     curl == 1.3.8,
                     text == 0.11.3.1,
                     bson == 0.2.2,
                     AesonBson == 0.2.1,
                     either == 4.0,
                     mtl == 2.1.2,
                     aeson == 0.6.2.1

